Multiple http/wpt/beacon/contentextensions/ test are flaky. https://bugs.webkit.org/show_bug.cgi?id=179256 <rdar://problem/35401978>

Reviewed by Alex Christensen.

Tools:

Update WebKitTestRunner to set a temporary path for content extensions so that its WKTR
instance gets its own folder to avoid conflicts and flakiness.

* WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::TestController::platformConfigureViewForTest):

LayoutTests:

Stop marking content extensions tests as flaky.

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/197366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226751 268f45cc-cd09-0410-ab3c-d52691b4dbfc